--- a/analytics.html
+++ b/analytics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <body bgcolor="#C2C2F0">
-<body background="http://orig03.deviantart.net/fd4f/f/2010/068/0/4/denim_texture_by_artbox_da.jpg">
+<body background="https://www.dropbox.com/s/pwstpuv0pi62z8f/background2.jpg?dl=1">
 <style>
 
 html, body {
@@ -27,8 +27,8 @@ html, body {
 
 line.link {
   fill: none;
-  stroke: #0F1A05;
-  stroke-width: 1.2px;
+  stroke: #6C6F69;
+  stroke-width: 1.3px;
 }
 
 </style>
@@ -94,43 +94,94 @@ root={
      "name": "contact", "group":"#3D991F","given":1, "size": 7000,"img":emptyURL,
      "children": [
       {"name": "clive.frostick@ipsos.com", "group":"#3D991F", "size": 4000, "ll":3,"img":emptyURL},
-      {"name": "+4402088618755", "group":"#3D991F", "size": 4000, "ll":3,"img":emptyURL}
+      {"name": "+44 0208 861 8755", "group":"#3D991F", "size": 4000, "ll":3,"img":emptyURL}
      ]
     },
     {
      "name": "\f \f \f \f Clive Frostick","jobtitle":"\f \f \f \f Senior Director", "group":"#3D991F","size":1000, "img":"https://www.dropbox.com/s/41uex4w63gyxgbs/clive.png?dl=1",
      "children": [
-      {"name": "BetweennessCentrality", "group":"#3D991F", "size": 3534, "ll":4,"img":emptyURL},
-      {"name": "LinkDistance", "group":"#3D991F", "size": 5731, "ll":4,"img":emptyURL},
-      {"name": "MaxFlowMinCut", "group":"#3D991F", "size": 7840, "ll":4,"img":emptyURL},
-      {"name": "ShortestPaths", "group":"#3D991F", "size": 5914, "ll":4,"img":emptyURL},
-      {"name": "SpanningTree", "group":"#3D991F", "size": 3416, "ll":4,"img":emptyURL}
-     ]
-    },
-    {
-     "name": "specialisms", "group":"#3D991F","size":"2000","img":emptyURL,
-     "children": [
-      {"name": "", "group":"#3D991F", "size": 7074, "ll":1,"img":emptyURL}
+      {"name": "conjoint", "group":"#3D991F", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "segmentation", "group":"#3D991F", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "forecasting", "group":"#3D991F", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "path models", "group":"#3D991F", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "data forensics", "group":"#3D991F", "size": 4000, "ll":4,"img":emptyURL}
      ]
     }
    ]
   },
   {"name": "pawel", "group":"#CD9B1D", "ll":10,"img":emptyURL,"children":[
-	{"name": "\f \f \f \f Pawel Paluchowski","jobtitle":"\f \f \f \f Statistician", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/h6rubumcq726y8e/pawel.png?dl=1"}
+	{
+     "name": "contact", "group":"#CD9B1D","given":1, "size": 7000,"img":emptyURL,
+     "children": [
+      {"name": "pawel.paluchowski@ipsos.com", "group":"#CD9B1D", "size": 4000, "ll":3,"img":emptyURL},
+      {"name": "+44 203 059 4896", "group":"#CD9B1D", "size": 4000, "ll":3,"img":emptyURL}
+     ]
+    },
+	{"name": "\f \f \f \f Pawel Paluchowski","jobtitle":"\f \f \f \f Statistician", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/h6rubumcq726y8e/pawel.png?dl=1",
+	"children": [
+      {"name": "statistical programming", "group":"#CD9B1D", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "econometrics", "group":"#CD9B1D", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "spatial analysis", "group":"#CD9B1D", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "data visualisation", "group":"#CD9B1D", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "panel data", "group":"#CD9B1D", "size": 4000, "ll":4,"img":emptyURL}
+     ]
+	}
   ]
   },
   {"name": "zoran", "group":"#343480", "ll":5,"img":emptyURL,"children":[
-	{"name": "\f \f \f \f Zoran Orlic","jobtitle":"\f \f \f \f Senior Data Analyst", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/br38juclxtrxtdj/zoran.png?dl=1"}
+	{
+     "name": "contact", "group":"#343480","given":1, "size": 7000,"img":emptyURL,
+     "children": [
+      {"name": "zoran.orlic@ipsos.com", "group":"#343480", "size": 4000, "ll":3,"img":emptyURL},
+      {"name": "+44 207 347 3939", "group":"#343480", "size": 4000, "ll":3,"img":emptyURL}
+     ]
+    },
+	{"name": "\f \f \f \f Zoran Orlic","jobtitle":"\f \f \f \f Senior Data Analyst", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/br38juclxtrxtdj/zoran.png?dl=1",
+	"children": [
+      {"name": "segmentation", "group":"#343480", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "key drivers analysis", "group":"#343480", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "decision trees", "group":"#343480", "size": 4000, "ll":4,"img":emptyURL}
+    ]
+   }
   ]
   },
   {"name": "ben", "group":"#6B0024", "ll":0,"img":emptyURL,"children":[
-	{"name": "\f \f \f \f Ben Hornsby","jobtitle":"\f \f \f \f Marketing Sciences Consultant", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/pn83o0l62bzupe7/ben.png?dl=1"}
-  ]
+    {
+     "name": "contact", "group":"#6B0024","given":1, "size": 7000,"img":emptyURL,
+     "children": [
+      {"name": "ben.hornsby@ipsos.com", "group":"#6B0024", "size": 4000, "ll":3,"img":emptyURL},
+      {"name": "+44 207 347 3333", "group":"#6B0024", "size": 4000, "ll":3,"img":emptyURL}
+     ]
+    },
+	{"name": "\f \f \f \f Ben Hornsby","jobtitle":"\f \f \f \f Marketing Sciences Consultant", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/pn83o0l62bzupe7/ben.png?dl=1",
+	"children": [
+      {"name": "weighting & sampling", "group":"#6B0024", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "conjoint", "group":"#6B0024", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "bespoke advanced solutions", "group":"#6B0024", "size": 4000, "ll":4,"img":emptyURL},
+	  {"name": "imputation", "group":"#6B0024", "size": 4000, "ll":4,"img":emptyURL},
+	  {"name": "ascription & data fusion", "group":"#6B0024", "size": 4000, "ll":4,"img":emptyURL}
+     ]
+    }
+   ]
   },
   {"name": "sarah", "group":"#007A7A", "ll":1,"img":emptyURL,"children":[
-	{"name": "\f \f \f \f Sarah Tipping","jobtitle":"\f \f \f \f Statistician", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/p8k6e3k82w8ipuf/sarah.png?dl=1"}
-  ]
-  },
+	{
+     "name": "contact", "group":"#007A7A","given":1, "size": 7000,"img":emptyURL,
+     "children": [
+      {"name": "sarah.tipping@ipsos.com", "group":"#007A7A", "size": 4000, "ll":3,"img":emptyURL},
+      {"name": "+44 207 347 3333", "group":"#007A7A", "size": 4000, "ll":3,"img":emptyURL}
+     ]
+    },
+	{"name": "\f \f \f \f Sarah Tipping","jobtitle":"\f \f \f \f Statistician", "size": 3534, "ll":4,"img":"https://www.dropbox.com/s/p8k6e3k82w8ipuf/sarah.png?dl=1",
+	"children": [
+      {"name": "weighting & sampling", "group":"#007A7A", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "matching & evaluation", "group":"#007A7A", "size": 4000, "ll":4,"img":emptyURL},
+      {"name": "time series modelling", "group":"#007A7A", "size": 4000, "ll":4,"img":emptyURL},
+	  {"name": "social science research methods", "group":"#007A7A", "size": 4000, "ll":4,"img":emptyURL}
+     ]
+	}	 
+   ]
+ }
  ]
 };
 
